[workspace]
resolver = "2"
members = [
  "sandbox"
, "sandbox-sdk"]

[workspace.package]
authors = ["avalsch."]
edition = "2021"

[workspace.dependencies]
widestring = "1.1.0"
windows = { version = "0.56.0", features = [
  "Win32_Foundation",
  "Win32_System_Console",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_ProcessStatus",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
]}
