[workspace]
resolver = "2"
members = [
  "sandbox",
  "sandbox-sdk",
  "egui-dx11-internal"
]

[workspace.package]
authors = ["avalsch."]
edition = "2021"

[workspace.dependencies]
egui-dx11-internal = { path = "./egui-dx11-internal" }
sandbox-sdk = { path = "./sandbox-sdk" }

egui = "0.27.2"
retour = { git = "https://github.com/Hpmason/retour-rs", features = ["static-detour"]}
widestring = "1.1.0"
windows = { version = "0.56.0", features = [
  "Win32_Foundation",
  "Win32_Graphics_Direct3D",
  "Win32_Graphics_Direct3D11",
  "Win32_Graphics_Direct3D_Fxc",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Win32_Graphics_Gdi",
  "Win32_System_Console",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_ProcessStatus",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
]}

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
