[package]
name = "sandbox"
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
cansi = "2.2.1"
color-eyre = "0.6.3"
egui.workspace = true
egui-aesthetix = { version = "0.2.3", features = ["carl"] }
egui-dx11-internal.workspace = true
egui_dock = "0.12.0"
nucleo = "0.5.0"
parking_lot.workspace = true
retour.workspace = true
sandbox-sdk.workspace = true
tracing = { version = "0.1.40", features = ["release_max_level_info"] }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["chrono", "parking_lot"] }
windows.workspace = true
